--- a/proje.html
+++ b/proje.html
@@ -4,15 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yemek Tarifim</title>
-    <script>
-        document.addEventListener("DOMContentLoaded",function(){
-            HosgeldinMesaji();
-        });//html belgesi tamamen yüklendiğinde HosgeldinMesajı çağrılır ve alert'in içinde yazılı ifade gözükür.
-        function HosgeldinMesaji()
-        {
-            alert("Yemek Tarifim Sitesine Hoş geldiniz!");
-        }
-    </script>
     <style>
         body {
             margin: 0;/*sitenin en üstündeki beyaz boşlukların silinmesini sağladı*/
@@ -69,7 +60,7 @@
         <a href="iletisim.html">İletişim</a>
     </nav>
     
-        <img src="/projefotograf/image1.jpg" class="anasayfa-image">
+        <img src="projefotograf/image1.jpg" class="anasayfa-image">
         <div class="anasayfa-aciklama">
             <p>Bu yemek sitesinin kuruluş amacı, kullanıcılara geniş bir yemek kültürü yelpazesi sunarak onlara lezzetli ve çeşitli yemek tariflerine kolay erişim sağlamaktır. Yemek sitemiz, ev aşçılarına ve yemek meraklılarına çeşitli kategorilerde tariflere ulaşma imkanı sunarak mutfak deneyimlerini zenginleştirmeyi amaçlamaktadır. Sitenin hedefi, kullanıcıların damak zevkine uygun tarifleri keşfetmelerine olanak tanımak ve farklı tariflerden ilham alarak kendi yemekleri üzerinde yaratıcılıklarını geliştirmelerine yardımcı olmaktır.</p>
         </div>
