--- a/iletisim.html
+++ b/iletisim.html
@@ -42,5 +42,20 @@
     <p>+90(531) 472 68 57</p>
     <h4>E-Posta:</h4>
     <p>yemektarifim@gmail.com</p>
+    <form id="feedbackForm" onsubmit="submitForm(event)">
+        <label for="firstName">Ad:</label>
+        <input type="text" id="firstName" name="firstName" required>
+
+        <label for="lastName">Soyad:</label>
+        <input type="text" id="lastName" name="lastName" required>
+
+        <label for="email">E-Posta:</label>
+        <input type="email" id="email" name="email" required>
+
+        <label for="message">Mesajınız:</label>
+        <textarea id="message" name="message" rows="4" required></textarea>
+
+        <button type="submit">Gönder</button>
+    </form>
 </body>
 </html>
