--- a/tarifler.html
+++ b/tarifler.html
@@ -29,7 +29,7 @@
         }
         #tarifler img
         {
-            width: 30%;/*sayfada otomatik %30 genişlik kapsamasını sağlar*/
+            width: 40%;/*sayfada otomatik %30 genişlik kapsamasını sağlar*/
             height: auto;/*yüksekliğin genişliğe göre otomatik ayarlanmasını sağlar*/
         }
         div div h4
@@ -56,7 +56,7 @@
         <h1>Tarifler</h1>
     </nav>
     <div id="tarifler">
-        <img src="projefotograf/tarif1.jpg" alt="Yaprak Sarması">
+        <img src="projefotograf/tarif1.jpg" alt="Yaprak Sarması"><!--alt etiketi resmin yüklenemediği anlarda bir anlatım oluşturur -->
         <div>
             <h4>Yaprak Sarma</h4>
             <h4>Malzemeler:</h4>
@@ -77,6 +77,218 @@
                 <p class="tarif_style">Öncelikle salamura yapraklar 2-3 dakika sıcak suda bekletilir, yıkanır ve süzgece alınır.Geniş bir kabın içerisine soğanlar rendelenir.Üzerine zeytinyağı dökülür.Pirinç yıkanarak  kabın içerisine eklenir.Baharatlar, salça ve tuzu da ilave edildikten sonra ince kıyılmış maydanozu da eklenerek karıştırılır.(çiğden bir iç harç olacak)Yaprağın geniş kısmına iç harçtan konulur ve rulo gibi iki yanlardan kapatarak sarılır. Bu işleme yaprak bitene kadar devam edilir.Sardığımız yaprakların üzerine zeytinyağı ve limon dilimleri ekleyip yaklaşık 5-6 su bardağı kadar da sıcak su ilave edilerek kısık ateşte pişirilir.(üzerine sarmalar dağılmasın diye tencere kapağından biraz küçük ebatta bir kase kapatabilirsiniz.)
                     Afiyet olsun…
                 </p>
+        </div>
+        <img src="projefotograf/tarif2.jpg" alt="Pirinç Pilavı">
+        <div>
+            <h4>Pirinç Pilavı</h4>
+            <h4>Malzemeler:</h4>
+            <li>2 su bardağı pirinç</li>
+            <li>3 su bardağı sıcak su</li>
+            <li>1 yemek kaşığı zeytinyağ</li>
+            <li>2 yemek kaşığı tereyağ</li>
+            <li>2 yemek kaşığı arpa şehriye</li>
+            <li> 1,5 çay kaşığı Tuz</li>
+        <h4>Yapılışı:</h4>
+            <p class="tarif_style">Pirinci yıkayın ve suyunun süzülmesi için bir kenarda süzgecin içinde bekletin.Zeytinyağı ve tereyağını yayvan bir tencereye alın. Arpa şehriyeleri altın sarısı renk alana kadar kavurun.Süzülmüş pirinci ilave ederek kavurmaya başlayın.Tuzu ilave edin.Pirinci sürekli karıştırarak 3-4 dakika kısık ateşte kavurduktan sonra içerisine 3 su bardağı kaynar su ekleyin.Tencerenin kapağını kapatın. Önce yüksek ateşte 3-4 dakika, daha sonra orta ateşte 3-4 dakika, en son da kısık ateşte tane tane olup, suyunu çeken kadar pişirin.Suyunu çekince ocaktan alın ve 20 dakika boyunca demlenmeye bırakın.Sonrasında dilediğiniz gibi servis edebilirsiniz. Afiyet olsun!</p>
+        </div>
+        <img src="projefotograf/tarif3.jpg" alt="Tantuni">
+        <div>
+            <h4>Tantuni</h4>
+            <h4>Malzemeler:</h4>
+            <li>4 adet tandır lavaşı</li>
+            <li>400 gram dana kontrfile</li>
+            <li>1/2 çay bardağı pamuk yağı</li>
+            <li>1/4 çay kaşığı tuz</li>
+            <li>1 yemek kaşığı toz kırmızı biber</li>
+            <li>1/2 çay bardağı su</li>
+            <li>1/4 demet maydanoz</li>
+            <li>2 adet domates</li>
+            <li>1 adet soğan</li>
+        <h4>Yapılışı:</h4>
+            <p class="tarif_style">Mersin usulü tantuni için etlerin varsa fazla yağlı kısımlarını temizleyip ince dilimler halinde doğrayın. Üzerini geçecek kadar soğuk su ilavesiyle suyunu çekene kadar haşlayın.Wok ya da sac tavayı ocakta kızdırın. Pamuk yağını tavaya dökün ve haşlamış olduğunuz etleri de üzerine ilave edin. Toz biberi de ekleyerek karıştırın. Suyu yavaş yavaş ilave ederek, suyunu çekene kadar pişirin.Pişen tantuniyi sandviç ekmeği ve lavaşın içerisine yerleştirin. İsteğe göre doğranmış domates, soğan ve maydanoz ilavesi yapın. Afiyetle tüketin!</p>
+        </div>
+        <img src="projefotograf/tarif4.jpg" alt="Etli Kuru Dolma">
+        <div>
+            <h4>Etli Kuru Dolma</h4>
+            <h4>Malzemeler:</h4>
+            <li>10 adet kuru patlıcan</li>
+            <li>200 gram kıyma</li>
+            <li>1 adet rendelenmiş soğan</li>
+            <li>1 kahve fincanı pirinç</li>
+            <li>1 yemek kaşığı salça</li>
+            <li>1 çay kaşığı kuru nane</li>
+            <li>1 çay kaşığı kekik</li>
+            <li>1 çay kaşığı karabiber</li>
+            <li>1 çay kaşığı sumak</li>
+            <li>1 tutam ince kıyılmış maydonoz</li>
+            <li>1 yemek kaşığı salça</li>
+            <li>1 tutam tuz</li>
+        <h4>Yapılışı:</h4>
+            <p class="tarif_style">Kuruları kaynayan suya atarak yumuşayana kadar haşlayın.Kıyma için tüm malzemeleri karıştırıp yoğurun.Kuruların ağzı tam dolmayacak şekilde içine kıymadan koyun.Tencerede yağ ve salçayı kavurun.Kuruları tencereye dizin. Hizasına kadar su ekleyerek orta ateşte pişirin.Etli kuru dolma tarifiniz hazır. Afiyet olsun!</p>
+        </div>
+        <img src="projefotograf/tarif5.jpg" alt="Patatesli Kereviz Salatası">
+        <div>
+            <h4>Patatesli Kereviz Salatası</h4>
+            <h4>Malzemeler:</h4>
+            <li>3 adet patates</li>
+            <li>1 adet kereviz</li>
+            <li>1 adet havuç</li>
+            <li>1 diş rendelenmiş sarımsak</li>
+            <li>2 su bardağı yoğurt</li>
+            <li>2 yemek kaşığı mayonez</li>
+            <li>1/2 çay bardağı haşlanmış mısır</li>
+            <li>2 tutam maydonoz (ya da dereotu)</li>
+            <li>1 tutam tuz</li>
+        <h4>Yapılışı:</h4>
+            <p class="tarif_style">Patatesleri küp küp doğrayın ve haşlayın.Haşlanan patateslerin suyunu süzün ve patates eziciyle ezin. Bir kaba alın.Üzerine rendelenmiş havuç ve kerevizi ekleyin.Bir kasede karıştırdığınız yoğurt sarımsak ve mayonezi ekleyin. Mısırları ve ince kıyılmış maydonozu ekleyin.En son tuzunu da ekleyip karıştırın.Patatesli kereviz salatası tarifiniz hazır. Afiyet olsun.</p>
+        </div>
+        <img src="projefotograf/tarif6.jpg" alt="Tavuk Şiş Dürüm">
+        <div>
+            <h4>Tavuk Şiş Dürüm</h4>
+            <h4>Malzemeler:</h4>
+            <li>4 adet tavuk göğsü</li>
+            <li>3 yemek kaşığı zeytinyağı</li>
+            <li>1 yemek kaşığı yoğurt</li>
+            <li>1 tatlı kaşığı salça</li>
+            <li>3 dişi sarımsak</li>
+            <li>1 çay kaşığı tuz</li>
+            <li>1 çay kaşığı karabiber</li>
+            <li>1 çay kaşığı tatlı toz kırmızı biber</li>
+        <h4>Yapılışı:</h4>
+            <p class="tarif_style">Tavukları küp şeklinde doğrayın.Bütün malzemeleri bir arada getirin ve karıştırın.İyice marine olması için bekletin.Tavukları şişlere dizin.190 derecelik fırında kızarana kadar 25 dakika kadar pişirin.Dürüm ekmeğinin arasına soğan,maydonoz ve domates ile sararak servis yapın.Afiyetler olsun.</p>
+        </div>
+        <img src="projefotograf/tarif7.jpg" alt="Ahtapot Izgara">
+        <div>
+            <h4>Ahtapot Izgara</h4>
+            <h4>Malzemeler:</h4>
+            <li>1 kg ahtapot</li>
+            <li>10 gram kekik </li>
+            <li>20 gram sarımsak</li>
+            <li>30 gram zeytinyağı</li>
+            <li>70 gram haşlanmış börülce</li>
+            <li>50 gram roka</li>
+            <li>20 gram yeşil soğan</li>
+            <li>20 gram zeytinyağı</li>
+            <li>1 adet taze sıkılmış limon suyu</li>
+        <h4>Yapılışı:</h4>
+            <p class="tarif_style">Ayıklanmış ahtapotu; zeytinyağı, sarımsak ve kekikle harmanladıktan sonra uzun bir süre fırında pişirin.Salatası için; ayıklanmış roka yaprakları ve yeşil soğanı ince ince doğrayın. Haşlanmış börülce ilavesiyle harmanlayıp servis tabağına alın. Zeytinyağı ve taze sıkılmış limon suyuyla karıştırın.Yumuşayana kadar fırında pişirdiğiniz ahtapotu servis öncesinde kısa bir süre ızgarada pişirip servis tabağına alın. Bekletmeden sevdiklerinizle paylaşın.</p>
+        </div>
+        <img src="projefotograf/tarif8.jpg" alt="Palamut Tava">
+        <div>
+            <h4>Palamut Tava</h4>
+            <h4>Malzemeler:</h4>
+            <li>2 adet palamut (fileto)</li>
+            <li>1/2 çay bardağı sıvı yağ</li>
+            <li>1/2 su bardağı mısır unu</li>
+            <li>1/2 su bardağı beyaz un</li>
+            <li>1 çay kaşığı tuz</li>
+        <h4>Yapılışı:</h4>
+            <p class="tarif_style">Palamutları kanı tamamen temizleninceye kadar suyun içinde bekletin. Daha sonra süzgece alın ve iyice süzdürün.Sıvıyağı tavaya alın ve kızdırın. Palamut filetolarını önlü arkalı tuzlayın. Daha sonra unlayın ve fazla ununu sirkeleyin.Kızgın tavaya alın.Orta ateşte arkalı önlü pişirin.Yanına bol yeşillikle servis edebilirsiniz.Afiyet olsun!</p>
+        </div>
+        <img src="projefotograf/tarif9.jpg" alt="Poğaça">
+        <div>
+            <h4>Poğaça</h4>
+            <h4>Malzemeler:</h4>
+            <li>1 adet yaş maya</li>
+            <li>1 su bardağı ılık su</li>
+            <li>1 su bardağı ılık süt</li>
+            <li>1 tatlı kaşığı toz şeker</li>
+            <li>1 tatlı kaşığı tuz</li>
+            <li>2 yemek kaşığı yoğurt</li>
+            <li>2 yemek kaşığı sıvı yağ</li>
+            <li>6 su bardağı un</li>
+            <li>1 adet yumurta</li>
+        <h4>Yapılışı:</h4>
+            <p class="tarif_style">Maya ve şekeri bir kaba alın.Üzerine sıvı malzemeleri ekleyerek çatalla mayayı ezin.Azar azar un karışımını ekleyerek yumuşak ele yapışmayan bir hamur elde edin.Yarım saat kadar mayalanmaya bırakın.Elinizle ceviz büyüklüğünde parçalar koparıp istediğiniz şekilde yuvarlayın.Fırın tepsisine dizerek üzerine yumurta sarısı sürün. Dilerseniz beyaz haşhaş, susam gibi malzemelerle üzerini süsleyebilirsiniz.180 derecede önceden ısıtılmış fırında üzeri renk alıp güzelce kabarana kadar yaklaşık 30 dakika pişirin.Oda sıcaklığında bir süre dinlendirin ve servis edin. Afiyetler olsun!</p>
+        </div>
+        <img src="projefotograf/tarif10.jpg" alt="Sütlü İrmik Tatlısı">
+        <div>
+            <h4>Sütlü İrmik Tatlısı</h4>
+            <h4>Malzemeler:</h4>
+            <li>1 litre süt</li>
+            <li>9 yemek kaşığı irmik</li>
+            <li>10 yemek kaşığı toz şeker</li>
+            <li>1 paket vanilin</li>
+            <li>1 yemek kaşığı tereyağı</li>
+            <li>1 çay kaşığı tarçın (servisi için)</li>
+        <h4>Yapılışı:</h4>
+            <p class="tarif_style">Soğuk sütü bir tencereye boşaltın. Şekeri ilave edin.İrmiği de ekleyin ve karıştırmaya devam edin.Kısık ateşte boza kıvamına gelene kadar karıştırarak pişirin.Vanilya ve tereyağı ekleyip karıştırdıktan sonra ocaktan alıp soğumaya bırakın.Su ile ıslattığınız bir kalıbın içine tatlıyı boşaltıp soğumaya bırakın. İrmik tatlısı soğuduktan sonra buzdolabında en az 4 saat bekletin.Tatlı iyice soğuduktan sonra kalıbın içerisinden çıkarın. Sütlü irmik tatlısını vişne ve tarçın ile süsleyebilirsiniz.Afiyet olsun.</p>
+        </div>
+        <img src="projefotograf/tarif11.jpg" alt="Kedi Dilli Tiramisu">
+        <div>
+            <h4>Kedi Dilli Tiramisu</h4>
+            <h4>Malzemeler:</h4>
+            <li>1 paket kedidilli bisküvi</li>
+            <li>2 adet yumurta sarısı</li>
+            <li>2 yemek kaşığı un</li>
+            <li>1 yemek kaşığı mısır nişastası</li>
+            <li>4 yemek kaşığı toz şeker</li>
+            <li>3 su bardağı süt</li>
+            <li>200 gram labne</li>
+            <li>200 gram krema</li>
+            <li>1,5 yemek kaşığı granül kahve</li>
+            <li>1,5 yemek kaşığı toz şeker</li>
+            <li>1,5 su bardağı ılık su</li>
+            <li>3 yemek kaşığı kakao</li>
+        <h4>Yapılışı:</h4>
+            <p class="tarif_style">Yumurta, süt, şeker, nişasta ve unu bir tencereye aktarıp güzelce karıştırın ve ocağın üzerine alıp pişirin. Pişirirken karıştırın ve muhallebi kıvamı almasını sağlayın.Kıvam alan muhallebinin içerisine kremayı ilave edip güzelce çırpın.Ardından labneyi de ilave ederek güzelce çırpın.Ardından kremayı dinlenmeye alın.Bisküvileri ıslatacağınız karışım için kahve, şeker ve suyu bir kapta karıştırın. Üzerine kremanın yarısını ilave edin.Küçük boy kare borcamın içerisine kedidili bisküvileri kahveyle ıslatarak dizin.Üzerine kremanın yarısını ilave edin.Bir kat daha kahveyle ıslatılmış kedidili dizin.Üzerine son kalan kremayı ilave edin.Spatula ile üzerini düzeltin.Ardından kakaoyu serpin.Dilediğiniz sayıda dilimleyin. Biz 6 dilim olmasını tercih ettik.Bu kedidilli tiramisu tarifi favoriniz olacak. Afiyet olsun!</p>
+        </div>
+        <img src="projefotograf/tarif12.jpg" alt="Krem Brüle">
+        <div>
+            <h4>Krem Brüle</h4>
+            <h4>Malzemeler:</h4>
+            <li>400 ml krema</li>
+            <li>100 ml süt</li>
+            <li>5 adet yumurta sarısı</li>
+            <li>60 gram toz şeker</li>
+            <li>2 ml vanilya özütü</li>
+            <li>40 gram toz şeker</li>
+        <h4>Yapılışı:</h4>
+            <p class="tarif_style">Süt ve kremayı karıştırıp kaynaması için ocağa koyun. Bu esnada yumurta sarıları, vanilya özütü ve şekeri içindeki şeker iyice eriyinceye kadar çırpın.Kaynayan karışımı yumurta ve şekere azar azar ekleyerek karıştırın. Karışımı içinde hiç bir kalıntı kalmaması için iki kez süzün.Süzdüğünüz karışımı en az 10 dakika dinlendirin. Bu süreyi köpük tamamen çökene kadar uzatabilirsiniz.Son kalan köpükleri de kaşıkla alıp karışımı çok derin olmayan fırın kaplarına paylaştırın.Fırın kaplarını içine temiz bir bez serdiğiniz derin bir tepsiye yerleştirin. Varsa ufak köpükleri de peçete yardımı ile alın.Tepsiye kapların yarısına gelecek kadar sıcak su koyup 125 derecelik fırında 35-40 dakika pişirin. Fırından çıkan tatlılar hala hafifçe yumuşak olmalı. Tatlılar önce oda sıcaklığında soğutulup sonrasında en az üç saat buzdolabında dinlendirilmelidir.Soğuyan ve dinlenen tatlıların üzerine ince bir katman halinde şeker serpin ve pürmüz yardımı ile yakın. Karamel katmanı tekrar sertleşene kadar beş dakika bekleyin. Pürmüzünüz yoksa şekeri tavada eritip ince bir katman halinde tatlınızın üzerine dökebilirsiniz.Afiyet olsun.</p>
+        </div>
+        <img src="projefotograf/tarif13.jpg" alt="Kakaolu Kek">
+        <div>
+            <h4>Kakaolu Kek</h4>
+            <h4>Malzemeler:</h4>
+            <li>3 paket kakaolu bisküvi</li>
+            <li>4 çay bardağı süt</li>
+            <li>1 tepeleme çay kaşığı kabartma tozu</li>
+            <li>2 yemek kaşığı sürülebilir çikolata</li>
+        <h4>Yapılışı:</h4>
+            <p class="tarif_style">Bisküvileri robotta ya da ezerek toz haline getirin ve bir karıştırma kabına alın.Kabartma tozunu ekleyip karıştırın.Son olarak sütü kontrollü ekleyip spatula ya da kaşıkla karıştırın. Karışım yumuşak ve akışkan olana kadar mutlaka karıştırma işlemine devam edin.Karışımı, hafifçe yağlanmış ufak bir kalıba dökün. Derin bir tencerenin içine bir kase ya da derin tabak yerleştirin, tencerenin tabanına kalıba değmeyecek kadar sıcak su ekleyip kalıbı kasenin üzerine yerleştirin.Tencerenin üzerine bir bez örtün ve kapağını kapatın.Kısık ateşte 25-30 dakika kek pişene kadar pişirin. Pişen keki tencereden çıkarıp 10-15 dakika dinlendirip kalıptan çıkarın.Kahvaltılık sürülebilir çikolatayı benmaride eritip kekin üzerine döküp servis yapın.Ayrıca servis için krem şanti, dondurma ya da reçel de kullanabilirsiniz. Afiyet olsun.</p>
+        </div>
+        <img src="projefotograf/tarif14.jpg" alt="Limonata">
+        <div>
+            <h4>Limonata</h4>
+            <h4>Malzemeler:</h4>
+            <li>10 adet limon</li>
+            <li>2 su bardağı toz şeker</li>
+            <li>5 su bardağı içme suyu</li>
+            <li>1/2 demet nane</li>
+            <li>2 su bardağı buz</li>
+        <h4>Yapılışı:</h4>
+            <p class="tarif_style">Bol suda yıkadığınız 10 adet limonun, kabuklarını rendenin kalın tarafıyla rendeleyin. Beyaz kısımlarını almamaya özen gösterin.Kabuğu rendelenmiş dört adet limonu ortadan ikiye kesin ve suyunu sıkın. Kalan limonları küçük parçalar halinde dilimleyin.2 su bardağı toz şeker ve taze sıkılmış limonların suyunu karıştırın.Rendelenmiş limon kabuklarını, limon parçaları ve ayıkladığınız 1 demet nane yapraklarının yarısını da ekledikten sonra şeker tamamen eriyip, tüm limonların suyu çıkana kadar yoğurun.Nane yapraklarını da ekleyin.Özünün çıkması için bu karışımı tel bir süzgeç yardımıyla bir kaseye süzün.5 su bardağı içme suyunu ekledikten sonra limonatayı buzdolabında soğutun.2 su bardağı buz ilavesiyle karıştırdıktan sonra  keyfini çıkararak için. Afiyet olsun!</p>
+        </div>
+        <img src="projefotograf/tarif15.jpg" alt="Çikolatalı Milkshake">
+        <div>
+            <h4>Çikolatalı Milkshake</h4>
+            <h4>Malzemeler:</h4>
+            <li>2 tatlı kaşığı kakao</li>
+            <li>3 tatlı kaşığı toz şeker</li>
+            <li>80 gram şeker</li>
+            <li>200 ml krema</li>
+        <h4>Yapılışı:</h4>
+            <p class="tarif_style">200 ml kremayı uygun bir kaseye alarak  çırpma teli yada mikser yardımı ile hafifçe kabartın. 3 tatlı kaşığı şekeri de kabardıktan sonra ilave edin ve son bir kez çırpın.80 gram benmari usulü erittiğiniz çikolatayı bu karışıma ilave edin ve spatula yardımıyla söndürmemeye gayret ederek karıştırın.2 tatlı kaşığı kakaoyu da ilave edip karıştırmaya devam edin.Çikolatanızın bir kısmını kaşığa alarak bardağınızı zevkinize göre süsleyin.Bardağa karışımı ilave edin ve içeceğiniz hazır. Dilediğiniz şekilde süsleyebilirsiniz.Afiyet olsun!</p>
+        </div>
+        <img src="projefotograf/tarif16.jpg" alt="Vanilyalı Badem Sütü">
+        <div>
+            <h4>Vanilyalı Badem Sütü</h4>
+            <h4>Malzemeler:</h4>
+            <li>1 su bardağı kabuksuz badem</li>
+            <li>3,5 su bardağı su</li>
+            <li>1 adet vanilya çubuğu</li>
+        <h4>Yapılışı:</h4>
+            <p class="tarif_style">Bademlerinizi soyarak işe başlayın. Sıcak suyun içine bademlerinizi koyun. Yaklaşık 10 dakika kadar bekletin.Beklettiğiniz bademlerin kabuklarını soymaya başlayın.Kabukları soyulmuş bademleri ve suyu blenderın içine alın. Bademler içinde yok olana kadar çekin.Vanilya çubuğunu ortadan ikiye bölün ve özünü çıkarın. Çıkardığınız özü karışıma ekleyin.Orta boy bir kabın içine temiz bir tülbent serin. Karışımı tülbentin üzerine boşaltın. İyice süzün.Altta kalan kısmı bir cam şişenin içine ya da hava almayan bir kabın içine alıp, saklayın. Badem sütünüz hazır, afiyet olsun.</p>
         </div>
     </div>
 </body>
